--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ body{
     
 .apresentacao-div-conteudo {
           width: 35%;
+          background-image: linear-gradient(#4F6F52,#D2E3C8 );
+          color:#2b3a2c;
+          display:flex;   
+          justify-content:center;
+          align-items: center;
+          padding: 24px  0;
           
 }
 .apresentacao-titulo{
@@ -63,24 +69,24 @@ body{
     
 }
     
-    .professores-imagem{ 
+.professores-imagem{ 
         width: 120px;
-    }
+}
     
-    .professores-titulo{
+.professores-titulo{
         color:#2b3a2c;
         font-size: 24px;
         text-align: center;
     
-    }
+}
     
-    .professores-icones{
+.professores-icones{
         width: 24px;
         display: center;
-    }
+}
     
-    .professores-div{
+.professores-div{
         text-align: center;
         padding: 16px 0;
     
-    }
+}
