--- a/style.css
+++ b/style.css
@@ -55,15 +55,16 @@ body{
 }
     
 .apresentacao-div-conteudo {
-          width: 35%;
-          background-image: linear-gradient(#4F6F52,#D2E3C8 );
-          color:#2b3a2c;
-          display:flex;   
-          justify-content:center;
-          align-items: center;
-          padding: 24px  0;
           
+.apresentacao{
+        background-image: linear-gradient(#4F6F52,#D2E3C8 );
+        color:#2b3a2c;
+        display:flex;   
+        justify-content:center;
+        align-items: center;
+        padding: 24px  0;
 }
+
 .apresentacao-titulo{
         padding: 24px;
     
