--- a/style.css
+++ b/style.css
@@ -110,5 +110,5 @@ body {
 
 .professores-todos {
     display: grid;
-    grid-auto-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 20% 20% 20% 20% 20%;
 }
