--- a/style.css
+++ b/style.css
@@ -81,11 +81,12 @@ body {
 .professores-icones {
     width: 24px;
     display: center;
+    padding: 20PX;
 }
 
 .professores-div {
     text-align: center;
-    padding: 25px 0;
+    padding: 50px 0;
 }
 
 .professores-todos{
