--- a/style.css
+++ b/style.css
@@ -94,6 +94,6 @@ body {
     grid-template-columns: 20% 20% 20% 20% 20%;
 }
 .rodape-imagem{
-    weight: 60px;
+    height: 60px;
     padding: 12px  0;
 }
