--- a/style.css
+++ b/style.css
@@ -85,18 +85,24 @@ body {
 
 .professores-div {
     text-align: center;
-    padding: 16px 16px;
+    padding: 12px 0px;
 }
 
 .professores-todos {
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
 }
-.rodape-imagem{
-    height: 60px;
-    padding: 12px  0;
-}
 
 .rodape{
-    background-color: black;
+    background-color:#86A789;
+    text-align: center;
+    color:white; 
+  
+
 }
+
+.endereco{
+    padding: 12px   12px;  
+    font-size:24px;
+}
+
